--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
               alt="Логотип городка Седона">
         </a>
         <ul class="site-navigation">
-          <li><a href="blanck.html">Информация</a></li>
-          <li><a href="blanck.html">Фото и видео</a></li>
-          <li><a href="blanck.html">Карта штата</a></li>
+          <li><a href="blank.html">Информация</a></li>
+          <li><a href="blank.html">Фото и видео</a></li>
+          <li><a href="blank.html">Карта штата</a></li>
           <li><a href="catalogue.html">Гостиницы</a></li>
         </ul>
       </nav>
@@ -29,11 +29,9 @@
 
 <main class="index-main">
  <section class="top-background-images">
-    <h1 >Welcome to Gorgeus</h1>
-    <div>
-
-    <p> SEDONA </P>
-    </div>
+    <img src="img/welcome.svg">
+    <img src="img/gorgeous.svg">
+    <img src="img/grand-is-sucks.svg">
  </section>
 
  <section class="reasons-promo">
@@ -41,13 +39,13 @@
       <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
  </section>
 
- <section class="reasons-blue">
-    <div class="one-third">
+ <section class="benefit">
+    <div class="benefit-content">
       <h3>Настоящий</br>городок</h3>
       <span>№1</span>
       <p>Седона — не аттракцион для туристов, там</br>течёт своя жизнь</p>
     </div>
-    <div class="two-third">
+    <div class="benefit-image benefit--left">
       <img src="img/town-view.jpg"
            width="800"
            height="256"
@@ -55,22 +53,22 @@
     </div>
  </section>
 
- <section class="reasons-white">
+ <section class="advantages-list">
 
     <ul>
-     <li class="one-third">
+     <li class="advantages-item">
       <div class="icon-house"></div>
       <h3>Жильё</h3>
      <p>Рекомендуем пожить в настоящем</br>мотеле, всё как в кино!</p>
      </li>
 
-     <li class="one-third">
+     <li class="advantages-item">
       <div class="icon-food"></div>
       <h3>Еда</h3>
       <p>Всегда заказывайте фирменный бургер,</br>вы не разочаруетесь!</p>
      </li>
 
-     <li class="one-third">
+     <li class="advantages-item">
         <div class="icon-gift"></div>
         <h3>Сувениры</h3>
         <p>Не только китайского, но и местного</br>производства</p>
@@ -78,13 +76,13 @@
     </ul>
  </section>
 
- <section class="reasons-blue">
-    <div class="one-third">
+ <section class="benefit">
+    <div class="benefit-content">
       <h3>Там есть</br>мост дьявола</h3>
       <span>№2</span>
       <p>Да, по нему можно пройти! Если конечно,</br>вы осмелитесь</p>
    </div>
-   <div class="two-third">
+   <div class="benefit-image benefit--right">
      <img src="img/sedona-canyon.jpg"
           width="800"
           height="256"
@@ -92,22 +90,22 @@
    </div>
  </section>
 
- <section class="reasons-grey">
+ <section class="favors-list">
 
     <ul>
-      <li class="one-third">
+      <li class="favors-item">
         <h3>Небольшая</br>площадь</h3>
         <span>№3</span>
         <p>все достопримечательности</br>находятся очень близко</p>
       </li>
 
-      <li class="one-third">
+      <li class="favors-item">
         <h3>Красивая</br>дорога</h3>
         <span>№4</span>
         <p>Ехать в Седону из Лас-Вегаса совсем</br>не скучно!</p>
       </li>
 
-      <li class="one-third">
+      <li class="favors-item">
         <h3>Мало</br>туристов</h3>
         <span>№5</span>
         <p>Большинство едет в Гранд Каньон</br>и толпится там</p>
@@ -131,14 +129,13 @@
 </main>
 
 <footer class="index-footer">
-  <section class="visitsedona">
-      <h2 class="visitsedona-link" >#VISITSEDONA</h2>
-      <p>Телефон: <a href="tel:+78005558628">+7 800 555-86-28</a></p>
+  <section class="contacts">
+      <h2 class="contacts-title" >#VISITSEDONA</h2>
+      <a href="tel:+78005558628">+7 800 555-86-28</a>
   </section>
   <section class="footer-social">
       <h2>Социальные сети</h2>
       <ul>
-        <li>
           <li>
           <a class="social-button" class="icon-twitter" href="#">Твитер</a>
         </li>
