--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Седона</title>
      <link rel="icon" href="favicon.ico">
      <link rel="stylesheet" href="css/normalize.css" >
-     <link href="style.css" rel="stylesheet">
+     <link href="css/style.css" rel="stylesheet">
      <link rel="stylesheet" href="https://fonts.google.com/?query=PT+Sans&stylecount=1&preview.size=21&preview.layout=row&subset=cyrillic">
   </head>
 
