--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
      <link rel="icon" href="favicon.ico">
-     <link rel="stylesheet" href="css/normalize.css" >
-     <link href="css/style.css" rel="stylesheet">
+     <link rel="stylesheet" href="css/normalize.css">
+     <link rel="stylesheet" href="css/style.css">
      <link rel="stylesheet" href="https://fonts.google.com/?query=PT+Sans&stylecount=1&preview.size=21&preview.layout=row&subset=cyrillic">
   </head>
 
