--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <span>№1</span>
       <p>Седона — не аттракцион для туристов, там</br>течёт своя жизнь</p>
     </div>
-    <div class="benefit-image benefit--left">
+    <div class="benefit-image">
       <img src="img/town-view.jpg"
            width="800"
            height="256"
