--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 
 <main class="index-main">
  <section class="top-background-images">
-    <img src="img/welcome.svg">
-    <img src="img/gorgeous.svg">
-    <img src="img/grand-is-sucks.svg">
+    <img src="img/welcome-to-sedona.png">
  </section>
 
  <section class="reasons-promo">
@@ -53,9 +51,9 @@
     </div>
  </section>
 
- <section class="advantages-list">
+ <section class="advantages">
 
-    <ul>
+    <ul class="advantages-list">
      <li class="advantages-item">
       <div class="icon-house"></div>
       <h3>Жильё</h3>
@@ -76,13 +74,13 @@
     </ul>
  </section>
 
- <section class="benefit">
+ <section class="benefit benefit--right">
     <div class="benefit-content">
       <h3>Там есть</br>мост дьявола</h3>
       <span>№2</span>
       <p>Да, по нему можно пройти! Если конечно,</br>вы осмелитесь</p>
    </div>
-   <div class="benefit-image benefit--right">
+   <div class="benefit-image">
      <img src="img/sedona-canyon.jpg"
           width="800"
           height="256"
@@ -90,9 +88,9 @@
    </div>
  </section>
 
- <section class="favors-list">
+ <section class="favors">
 
-    <ul>
+    <ul class="favors-list">
       <li class="favors-item">
         <h3>Небольшая</br>площадь</h3>
         <span>№3</span>
