--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
 <body class="page-body">
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo">
-         <img src="img/logo-sedona.png"
-              width="138"
-              height="70"
-              alt="Логотип городка Седона">
-        </a>
-        <ul class="site-navigation">
-          <li><a href="blank.html">Информация</a></li>
-          <li><a href="blank.html">Фото и видео</a></li>
-          <li><a href="blank.html">Карта штата</a></li>
-          <li><a href="catalog.html">Гостиницы</a></li>
-        </ul>
+        <div class="main-header-bar">
+          <div class"main-navigation-wrapper">
+            <ul class="site-navigation">
+              <li><a href="blank.html">Информация</a></li>
+              <li><a href="blank.html">Фото и видео</a></li>
+              <li>
+                <a class="main-header-logo">
+                   <img src="img/logo-sedona.png" width="138" height="70" alt="Логотип городка Седона">
+                </a>
+              </li>
+              <li><a href="blank.html">Карта штата</a></li>
+              <li><a href="catalogue.html">Гостиницы</a></li>
+            </ul>
+         </div>
+       </div>
       </nav>
     </header>
 
@@ -132,7 +135,7 @@
       <a href="tel:+78005558628">+7 800 555-86-28</a>
   </section>
   <section class="footer-social">
-      <h2>Социальные сети</h2>
+    <!--  <h2>Социальные сети</h2> -->
       <ul>
           <li>
           <a class="social-button" class="icon-twitter" href="#">Твитер</a>
