--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 <body class="page-body">
     <header class="main-header">
       <nav class="main-navigation">
-        <div class="main-header-bar">
-          <div class"main-navigation-wrapper">
             <ul class="site-navigation">
               <li><a href="blank.html">Информация</a></li>
               <li><a href="blank.html">Фото и видео</a></li>
@@ -25,12 +23,10 @@
               <li><a href="blank.html">Карта штата</a></li>
               <li><a href="catalogue.html">Гостиницы</a></li>
             </ul>
-         </div>
-       </div>
       </nav>
     </header>
 
-<main class="index-main">
+<main class="index-main container">
  <section class="top-background-images">
     <img src="img/welcome-to-sedona.png">
  </section>
