--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
 <body class="page-body">
-    <header class="main-header">
+    <header class="main-header container">
       <nav class="main-navigation">
             <ul class="site-navigation">
               <li><a href="blank.html">Информация</a></li>
@@ -125,7 +125,7 @@
 
 </main>
 
-<footer class="index-footer">
+<footer class="index-footer container">
   <section class="contacts">
       <h2 class="contacts-title" >#VISITSEDONA</h2>
       <a href="tel:+78005558628">+7 800 555-86-28</a>
