--- a/catalog.html
+++ b/catalog.html
@@ -10,20 +10,19 @@
   </head>
 
   <body class="page-body">
-      <header class="main-header">
+      <header class="main-header container">
         <nav class="main-navigation">
-          <a class="main-header-logo">
-           <img src="img/logo-sedona.png"
-                width="138"
-                height="70"
-                alt="Логотип городка Седона">
-          </a>
-          <ul class="site-navigation">
-            <li><a href="blank.html">Информация</a></li>
-            <li><a href="blank.html">Фото и видео</a></li>
-            <li><a href="blank.html">Карта штата</a></li>
-            <li><a href="catalogue.html">Гостиницы</a></li>
-          </ul>
+              <ul class="site-navigation">
+                <li><a href="blank.html">Информация</a></li>
+                <li><a href="blank.html">Фото и видео</a></li>
+                <li>
+                  <a class="main-header-logo" href="index.html">
+                     <img src="img/logo-sedona.png" width="138" height="70" alt="Логотип городка Седона">
+                  </a>
+                </li>
+                <li><a href="blank.html">Карта штата</a></li>
+                <li><a href="catalogue.html">Гостиницы</a></li>
+              </ul>
         </nav>
       </header>
 
@@ -174,13 +173,13 @@
 </section>
 </main>
 
-<footer class="index-footer">
+<footer class="index-footer container">
   <section class="contacts">
       <h2 class="contacts-title" >#VISITSEDONA</h2>
       <a href="tel:+78005558628">+7 800 555-86-28</a>
   </section>
   <section class="footer-social">
-      <h2>Социальные сети</h2>
+    <!--  <h2>Социальные сети</h2> -->
       <ul>
           <li>
           <a class="social-button" class="icon-twitter" href="#">Твитер</a>
