--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </a>
               </li>
               <li><a href="blank.html">Карта штата</a></li>
-              <li><a href="catalogue.html">Гостиницы</a></li>
+              <li><a href="catalog.html">Гостиницы</a></li>
             </ul>
       </nav>
     </header>
