--- a/catalog.html
+++ b/catalog.html
@@ -31,7 +31,7 @@
       <!-- <h2>Фильтр выбора жилья</h2>-->
       <form class="filter-menu" method="get" action="https://echo.htmlacademy.ru">
         <fieldset>
-          <legend class="form-legend1">Инфраструктура:</legend>
+          <legend class="form-legend">Инфраструктура:</legend>
           <ul class="filter-list">
             <li class="check">
               <input class ="form-input" type="checkbox" name="infrastructure" checked value="pool" id="filter-pool">
