ДЗ 5.19. Сетка на гридах для внутренней страницы
правки

--- a/catalog.html
+++ b/catalog.html
@@ -26,7 +26,7 @@
         </nav>
       </header>
 
-<main>
+<main class="container">
     <section class="filter">
       <!-- <h2>Фильтр выбора жилья</h2>-->
       <form class="filter-menu" method="get" action="https://echo.htmlacademy.ru">
@@ -65,10 +65,10 @@
         </fieldset>
 
         <fieldset class="price">
-          <legend class="form-legend">Стоимость в сутки, <span>₽</span></legend>
+          <legend class="form-legend">Стоимость в сутки, <span>₽:</span></legend>
           <label class="min-price">от<input type="text" name="min-price" value="0"></label>
           <label class="max-price">до<input type="text" name="max-price" value="3000"></label>
-          <button type="submit">Показать</button>
+          <button class="show-button" type="submit">Показать</button>
         </fieldset>
       </form>
 
