--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     </header>
 
 <main class="index-main container">
+  <h1 class="visually-hidden">Welcome to Sedona</h1>
  <section class="top-background-images">
-    <img src="img/welcome-to-sedona.png">
+    <img src="img/welcome-to-sedona.png" width="458" height="352" alt="Добро пожаловать в Седону">
  </section>
 
  <section class="reasons-promo">
@@ -54,19 +55,26 @@
 
     <ul class="advantages-list">
      <li class="advantages-item">
-      <div class="icon-house"></div>
+      <div class="icon-house">
+        <img src="img/icons/icon-house.png" width="75" height="72" alt="Домик">
+      </div>
+
       <h3>Жильё</h3>
      <p>Рекомендуем пожить в настоящем</br>мотеле, всё как в кино!</p>
      </li>
 
      <li class="advantages-item">
-      <div class="icon-food"></div>
+      <div class="icon-food">
+        <img src="img/icons/icon-burger.png" width="75" height="72" alt="Бургер">
+      </div>
       <h3>Еда</h3>
       <p>Всегда заказывайте фирменный бургер,</br>вы не разочаруетесь!</p>
      </li>
 
      <li class="advantages-item">
-        <div class="icon-gift"></div>
+        <div class="icon-gift">
+          <img src="img/icons/icon-gift.png" width="75" height="72" alt="Подарок">
+        </div>
         <h3>Сувениры</h3>
         <p>Не только китайского, но и местного</br>производства</p>
     </li>
@@ -92,19 +100,19 @@
     <ul class="favors-list">
       <li class="favors-item">
         <h3>Небольшая</br>площадь</h3>
-        <span>№3</span>
+        <span>— №3 —</span>
         <p>все достопримечательности</br>находятся очень близко</p>
       </li>
 
       <li class="favors-item">
         <h3>Красивая</br>дорога</h3>
-        <span>№4</span>
+        <span>— №4 —</span>
         <p>Ехать в Седону из Лас-Вегаса совсем</br>не скучно!</p>
       </li>
 
       <li class="favors-item">
         <h3>Мало</br>туристов</h3>
-        <span>№5</span>
+        <span>— №5 —</span>
         <p>Большинство едет в Гранд Каньон</br>и толпится там</p>
       </li>
     </ul>
@@ -113,7 +121,7 @@
  <section class="interested">
     <h2>Заинтересовались?</h2>
     <p>  Укажите предполагаемые даты поездки,</br> и мы покажем вам лучшие предложения гостиниц в седоне  </p>
-    <button class="search-button" type="submit">Поиск гостиницы в Седоне</button>
+    <button class="search-button" type="submit">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
  </section>
 
  <section class="map" id= "map">
@@ -134,23 +142,40 @@
     <!--  <h2>Социальные сети</h2> -->
       <ul>
           <li>
-          <a class="social-button" class="icon-twitter" href="#">Твитер</a>
+          <a class="social-button" class="icon-twitter" href="#">
+            <span class="visually-hidden">Твитер</span>
+            <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M10.95 1.14409C12.635 0.648089 13.934 1.41409 14.527 2.32309C15.2 2.09209 15.858 1.84209 16.538 1.61509C16.5249 2.30145 16.2117 2.94761 15.681 3.38309C16.366 3.55309 16.985 2.89209 16.985 2.89209C16.816 3.89209 15.979 4.68009 15.422 4.91609C15.191 11.6661 12.247 16.1331 5.34498 15.9981H4.89898C4.48898 15.9981 0.734977 15.5381 0.000976562 14.1111C2.27198 14.3071 3.89398 13.6891 4.69398 12.9341C3.73398 12.6341 2.01498 12.4571 1.71498 9.98409C2.06398 10.0901 2.27898 10.2121 2.90498 10.1031C1.70498 9.24709 0.373977 8.53009 0.447977 6.33009C0.732977 6.65809 1.51498 6.86609 1.78798 6.80209C1.08498 6.56109 -0.182023 3.44209 0.893977 1.85009C2.71198 3.70409 4.62898 5.45609 8.04598 5.62309C8.25398 3.33009 9.18298 1.79309 10.95 1.14409Z" fill="white"/>
+            </svg>
+          </a>
         </li>
         <li>
-          <a class="social-button" class="icon-facebook" href="#">Фейсбук</a>
+          <a class="social-button" class="icon-facebook" href="#">
+          <span class="visually-hidden">Фейсбук</span>
+          <svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white"/>
+          </svg>
+          </a>
         </li>
         <li>
-          <a class="social-button" class="icon-youtube" href="#">Инстаграм</a>
+          <a class="social-button" class="icon-youtube" href="#">
+            <span class="visually-hidden">Ютуб</span>
+          <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M3 0H17C18.65 0 20 1.35 20 3V13C20 14.65 18.65 16 17 16H3C1.35 16 0 14.65 0 13V3C0 1.35 1.35 0 3 0ZM6.027 4.002V11.998L15.014 8L6.027 4.002Z" fill="white"/>
+          </a>
+          </svg>
         </li>
       </ul>
    </section>
    <section class="developer">
       <p> Website by
-  <a class="academy" href="https://htmlacademy.ru">HTML Academy</a>
-        <img src="img/logo_htmlacademy.svg"
-             width="115"
-             height="33.03"
-             alt="Логотип HTML Academy">
+        <a class="academy" href="https://htmlacademy.ru">
+           <span class="visually-hidden">HTML Academy</span>
+              <img src="img/logo_htmlacademy.svg"
+                 width="115"
+                 height="33.03"
+                 alt="Логотип HTML Academy">
+        </a>
       </p>
    </section>
 </footer>
